sandwich alignment correction

--- a/style.css
+++ b/style.css
@@ -716,7 +716,7 @@ body {
 
     .header__menu-top {
         display: block;
-        padding-top: 10px;
+        padding-top: 5px;
     }
 
     .top__banner {
